# turpoints

./: .gitignore  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
contrib/: env-sample
pyprg/: asgi.py  settings.py  urls.py  wsgi.py
pyprg/comments/: admin.py  models.py
pyprg/comments/api/: serializers.py  viewsets.py
pyprg/comments/migrations/: 0001_initial.py
pyprg/core/: admin.py  models.py  tests.py
pyprg/core/api/: serializers.py  viewsets.py
pyprg/core/migrations/: 0001_initial.py  0002_turpoint_location.py  0003_turpoint_comments.py  0004_turpoint_evaluation.py  0005_turpoint_foto.py
pyprg/evaluation/: admin.py  models.py
pyprg/evaluation/api/: serializers.py  viewsets.py
pyprg/evaluation/migrations/: 0001_initial.py
pyprg/location/: admin.py  models.py
pyprg/location/api/: serializers.py  viewsets.py
pyprg/location/migrations/: 0001_initial.py
pyprg/resources/: admin.py  models.py
pyprg/resources/api/: serializers.py  viewsets.py
pyprg/resources/migrations/: 0001_initial.py
tpoints/: asgi.py  settings.py  wsgi.py
tpoints/core/: admin.py  models.py
tpoints/core/api/: viewsets.py
